hphp/hack/test/typecheck/tests_bypass_visibility/internal_interface.php.exp
ERROR: File "internal_interface.php--non_test.php", line 5, characters 16-24:
Cannot access an internal element from module `m` in the default module (Typing[4444])
  File "internal_interface.php--defs.php", line 11, characters 16-24:
  This is from module `m`
ERROR: File "internal_interface.php--non_test.php", line 9, characters 27-39:
Cannot access an internal element from module `m` in the default module (Typing[4444])
  File "internal_interface.php--defs.php", line 6, characters 20-32:
  This is from module `m`
